[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harpertoken"
version = "0.1.0"
description = "CMA-ES RL Agent for Gymnasium Environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=0.29.0",
    "cma>=3.0.0",
    "huggingface-hub>=0.10.0",
    "matplotlib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/harpertoken/harpertoken-cartpole"
Repository = "https://github.com/harpertoken/harpertoken-cartpole"
Issues = "https://github.com/harpertoken/harpertoken-cartpole/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["harpertoken*"]

[tool.setuptools.package-data]
harpertoken = ["*.py"]