[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harpertoken-cartpole"
version = "0.1.0"
description = "This model solves CartPole-v1 using CMA-ES with a linear policy."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=0.29.0",
    "cma>=3.0.0",
    "huggingface-hub>=0.10.0",
    "matplotlib>=3.0.0",
]

[project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
     "ruff>=0.1.0",
     "pre-commit>=3.0.0",
 ]

[project.urls]
HuggingFace = "https://huggingface.co/harpertoken/harpertoken-cartpole"

[tool.setuptools.packages.find]
where = ["."]
include = ["harpertoken*"]

[tool.setuptools.package-data]
harpertoken = ["*.py"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"